PS Main README.md

--- a/ENG/#1) python/-1)Python input() is Always a String/1-1.md
+++ b/ENG/#1) python/-1)Python input() is Always a String/1-1.md
@@ -231,7 +231,7 @@ By specifying the desired type at the beginning of `input()`, you can finally co
 
 ------------------------------------
 
-> All code used in the text and for pre-verification is uploaded to [Github](https://github.com/XaicuL/Dev.to/blob/main).
+> All code used in the text and for pre-verification is uploaded to [Github](https://github.com/XaicuL/Dev.to/blob/main/ENG/%231)%20python/-1)Python%20input()%20is%20Always%20a%20String/1-1.ipynb).
 
 ------------------------------------
 > I'm still learning and growing. If you spot any errors or need further explanation, please let me know. Thank you.
