--- a/KOR/#1) python/-1)Python input()은 항상 문자열이다/1-1.md
+++ b/KOR/#1) python/-1)Python input()은 항상 문자열이다/1-1.md
@@ -260,7 +260,7 @@ input() 서두에 원하는 타입을 명시함으로써,
 
 ------------------------------------
 
-> 본문에 사용된 코드와 사전 검증용 코드는 모두 [Github](https://github.com/XaicuL/Dev.to/blob/main)에 업로드되어 있습니다.
+> 본문에 사용된 코드와 사전 검증용 코드는 모두 [Github](https://github.com/XaicuL/Dev.to/blob/main/KOR/%231)%20python/-1)Python%20input()%EC%9D%80%20%ED%95%AD%EC%83%81%20%EB%AC%B8%EC%9E%90%EC%97%B4%EC%9D%B4%EB%8B%A4/1-1.ipynb)에 업로드되어 있습니다.
 
 ------------------------------------
 > 저는 아직 배우고 성장하는 중입니다.<br> 혹시 오류나 더 자세한 설명이 필요한 부분이 있다면 알려주시면 감사하겠습니다. 
